<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileViewActivity">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
    <LinearLayout
        android:id="@+id/profile_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/textview_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/label_first_name" />
        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/textview_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/label_name" />
        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/textview_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/label_date_of_birth"
            android:layout_gravity="start" />
        <TextView
            android:id="@+id/textview_idul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/label_idul" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"

            android:layout_marginLeft="10dp">

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text=""
                android:textSize="18sp" />
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text=""
                android:textSize="18sp" />
            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=""
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/idul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>